Fix: The cross to undo a knockout is now visible again

--- a/src/pathwayvis/components/sidebar/sections/views/knockout.section.scss
+++ b/src/pathwayvis/components/sidebar/sections/views/knockout.section.scss
@@ -7,3 +7,7 @@
         padding-right: rem(0.4);
     }
 }
+
+.md-chip-remove-content{
+	display: inline-block;
+}
